src/content/docs/docs/specification/0.8.0-rc.4/index.md
---
title: Overview
description: MCP Description specification v0.8.0 RC.4 - status, source, schema, and section map.
slug: docs/specification/0.8.0-rc.4
sidebar:
  label: Overview
  order: 0
head:
  - tag: link
    attrs:
      rel: alternate
      type: text/markdown
      title: Complete MCP Description Specification 0.8.0 RC.4
      href: https://mcpdesc.org/specification/0.8.0-rc.4/mcpdesc.md
---

:::caution[Release candidate]
This is MCP Description **v0.8.0 Release Candidate 4**, refreshed from editorial edition 1
with no normative or schema changes. It is published for community testing. The current stable release remains
[v0.7.0](/docs/specification/0.7.0/).
:::

**Format version**: 0.8.0 · **Candidate**: v0.8.0-rc.4 · **Edition**: editorial.1 · **Date**: September 8, 2026

## About this candidate

MCP Description v0.8 adds support for MCP `2026-07-28`, multi-protocol descriptions,
extensions and client requirements, reusable security schemes, richer examples and
interactions, reusable components, and stronger serialization and semantic conformance.

## Source and schema

- **Canonical specification** - [`spec/draft/mcp-description.md`](https://github.com/mcpdesc/mcpdesc-specification/blob/v0.8.0-rc.4+editorial.1/spec/draft/mcp-description.md)
- **Editorial revision** - [`v0.8.0-rc.4+editorial.1`](https://github.com/mcpdesc/mcpdesc-specification/tree/v0.8.0-rc.4+editorial.1)
- **Release notes** - [`v0.8.0-rc.4`](https://github.com/mcpdesc/mcpdesc-specification/releases/tag/v0.8.0-rc.4)
- **Immutable JSON Schema** - [`0.8.0-rc.4.json`](https://mcpdesc.org/schema/mcp-description/0.8.0-rc.4.json)
- **Migration guide** - [Migrate from 0.7 to 0.8](/docs/specification/0.8.0-rc.4/migration-0.7-to-0.8)
- **Feedback** - [Report an interoperability issue](https://github.com/mcpdesc/mcpdesc-specification/issues)

:::note[Mirrored specification]
These pages mirror MCP Description **v0.8.0 Release Candidate 4** from
[`v0.8.0-rc.4+editorial.1`](https://github.com/mcpdesc/mcpdesc-specification/blob/v0.8.0-rc.4+editorial.1/spec/draft/mcp-description.md)
in `mcpdesc/mcpdesc-specification`.
Where these pages differ from upstream, upstream wins.
:::

### For AI assistants and tools

- **Complete candidate, single file** - [`/specification/0.8.0-rc.4/mcpdesc.md`](/specification/0.8.0-rc.4/mcpdesc.md)
- **Version index** - [`/specification/index.json`](/specification/index.json), including
  explicit `stable` and `candidate` fields and the compatible `latest` and `next` aliases

## Sections

1. [Introduction](/docs/specification/0.8.0-rc.4/introduction)
2. [Terminology](/docs/specification/0.8.0-rc.4/terminology)
3. [Document Structure](/docs/specification/0.8.0-rc.4/document-structure)
4. [Versioning](/docs/specification/0.8.0-rc.4/versioning)
5. [Info Object](/docs/specification/0.8.0-rc.4/info-object)
6. [Transports](/docs/specification/0.8.0-rc.4/transports)
7. [Security](/docs/specification/0.8.0-rc.4/security)
8. [Capabilities](/docs/specification/0.8.0-rc.4/capabilities)
9. [Tools](/docs/specification/0.8.0-rc.4/tools)
10. [Resources and Resource Templates](/docs/specification/0.8.0-rc.4/resources)
11. [Prompts](/docs/specification/0.8.0-rc.4/prompts)
12. [Elicitation Declarations](/docs/specification/0.8.0-rc.4/elicitation)
13. [Tags](/docs/specification/0.8.0-rc.4/tags)
14. [Specification Extensions](/docs/specification/0.8.0-rc.4/specification-extensions)
15. [Serialization](/docs/specification/0.8.0-rc.4/serialization)
16. [Conformance](/docs/specification/0.8.0-rc.4/conformance)
17. [Reusable Components and Local References](/docs/specification/0.8.0-rc.4/components)

See also the [appendices](/docs/specification/0.8.0-rc.4/appendices),
[examples](/docs/specification/0.8.0-rc.4/examples), and cross-version
[changelog](/docs/specification/changelog).